--- a/client/templates/page.ng.html
+++ b/client/templates/page.ng.html
@@ -1,1 +1,9 @@
-g
+<div class="row">
+  <div class="span9">
+    Level 1 column
+    <div class="row">
+      <div class="span6">Level 2</div>
+      <div class="span3">Level 2</div>
+    </div>
+  </div>
+</div>
