--- a/client/templates/ads-view.ng.html
+++ b/client/templates/ads-view.ng.html
@@ -1,6 +1,6 @@
 <div ng-class="{{'checked':item.checked}}" ng-repeat="item in ads">
 	<div class="desc1">
-	<img class="imges" src="{{item.img}}">
+	<img class="imges" ng-src="{{item.img}}">
 	</div>
 	<div class="desc">
 		<p>
