--- a/client/templates/ads-view.ng.html
+++ b/client/templates/ads-view.ng.html
@@ -1,4 +1,4 @@
-<div ng-class="{{'checked':item.checked}}" ng-repeat="item in ads">
+<div ng-repeat="item in ads" ng-class="{'checked':item.checked}">
 	<div class="desc1">
 	<img class="imges" ng-src="{{item.img}}">
 	</div>
