--- a/client/templates/ads-view.ng.html
+++ b/client/templates/ads-view.ng.html
@@ -1,14 +1,53 @@
-<div ng-repeat="item in ads" ng-class="{'checked':item.checked}">
-	<div class="desc1">
-	<img class="imges" ng-src="{{item.img}}">
+
+<div>
+	<p>
+		Поисковой запрос:  {{query}}
+	</p>
+	<p>
+		сортировать по: 
+	</p>
+</div>
+
+
+
+
+
+
+
+<div ng-repeat="item in ads"  ng-class="['checked':item.checked']">
+	<div class="row">
+	<div class="col-md-3">
+		<img class="imges" ng-src="{{item.img}}">
 	</div>
-	<div class="desc">
+	
+	<div class="col-md-9">
 		<p>
-			Author
+			<a  ng-href="#">{{item.author}}</a>
 		</p>
-		<p>Desc</p>
-		<p>Price</p>
-		<p>Date</p>
+		<p>Описание:<br>{{item.desc}}</p>
+		<p>Цена: {{item.price}}руб.</p>
+		<p>Дата: {{item.date}}</p>
 	</div>
 
 </div>
+</div>
+<nav class="pages">
+	<ul class="pagination">
+		<li ng-class="{'disabled': currentPage==1}">
+			<a href="#" aria-label="Previous"><span class="glyphicon glyphicon-chevron-left"></span></a>
+		</li>
+
+		<li ng-repeat="n in pages" ng-class="{'active': n==currentPage}">
+			<a href="{{addressPattern}}{{n}}">
+				<span class="sr-only" ng-show="n==currentPage">
+				что тут??
+				</span>
+			</a>
+		</li>
+
+		<li ng-class="{'disabled': currentPage==lastPage}">
+			<a href="#" aria-label="Next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+		</li>
+
+	</ul>
+</nav>
