--- a/client/ads/view/ad.ng.html
+++ b/client/ads/view/ad.ng.html
@@ -1,3 +1,98 @@
-<div class="row">
-    gg
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-4">
+			<div id="carousel" class="carousel slide" style="margin-top: 15px;">
+		<!--Индикаторы лайдов-->
+		<ol class="carousel-indicators">
+			<li class="active" data-target="#carousel" data-slide-to="0"></li>
+			<li data-target="#carousel" data-slide-to="1"></li>	
+			<li data-target="#carousel" data-slide-to="2"></li>
+			<li data-target="#carousel" data-slide-to="3"></li>
+			<li data-target="#carousel" data-slide-to="4"></li>
+		</ol>
+		<!--Слайды-->
+		<div class="carousel-inner">
+			<div class="item active">
+				<img src="first.jpg" alt="">
+				<div class="carousel-caption">
+				</div>
+			</div>
+			<div class="item">
+				<img src="second.jpg" alt="">
+				<div class="carousel-caption">
+				</div>
+			</div>
+			<div class="item">
+				<img src="third.jpg" alt="">
+				<div class="carousel-caption">
+				</div>
+			</div>
+			<div class="item">
+				<img src="fourth.jpg" alt="">
+				<div class="carousel-caption">
+				</div>
+			</div>
+			<div class="item">
+				<img src="fifth.jpg" alt="">
+				<div class="carousel-caption">
+				</div>
+			</div>
+		</div>
+
+		<!--Стрелки пекреключения слайдов-->
+		<a href="#carousel" class="left carousel-control" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+		</a>
+		<a href="#carousel" class="right carousel-control" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+		</a>		
+	</div>
+		</div>
+		<div class="col-lg-8">
+				<div class="row">	
+					<div class="col-lg-4">
+						<h2>Назваие</h2>
+					</div>
+					<div class="col-lg-4">
+						<h2>дата</h2>
+					</div>
+					<div class="col-lg-4">
+						<button type="button" class="btn btn-primary">Редактировать</button>
+					</div>
+				</div>
+				<div class="container-fluid well">	
+				<dl>
+					<dt>Цена</dt>
+					<dd>Получите подробную информацию о ключевых элементах инфраструктуры Bootstrap, в том числе о нашем подходе к созданию более качественных, быстрых и мощных веб-приложений.</dd>
+					<dt>Описание</dt>
+					<dd>Получите подробную информацию о ключевых элементах инфраструктуры Bootstrap, в том числе о нашем подходе к созданию более качественных, быстрых и мощных веб-приложений.</dd>
+				</dl>				
+				</div>
+				<div>
+					<legend>Оставьте свой комментарий</legend>
+						<div>
+							<div class="col-lg-6">
+								<textarea class="form-control" plceholder="Ваш комментарий" name="comment"></textarea>
+							</div>
+						</div>
+						<br/>
+						<button class="btn btn-primary">Отправить</button>
+						<br/>
+						<br/>
+						<div>							
+							<div class="well">
+								<a class="close">x</a>
+								<p><strong> Пастырь </strong></p>
+								<p style="font-family: Monotype Corsiva; font-size: 20px;"> Покайтесь, пока не поздно.</p>
+								<a type="button" href="#" style="align:right;">ответить</a>
+							</div>
+						</div>
+				</div>
+			
+			<div>	
+
+			</div>
+		</div>
+	</div>	
+	
 </div>
