--- a/client/view/login.ng.html
+++ b/client/view/login.ng.html
@@ -1,36 +1,65 @@
 <h2 ng-hide="register">Авторизация</h2>
 <h2 ng-show="register">Регистрация</h2>
-<form class="form-horizontal">
-  <div class="form-group" ng-class="{'has-error':hasErrors.login}">
+<div class="alert alert-warning alert-dismissible fade in" role="alert" ng-show="accountsError">
+      <button type="button" class="close" aria-label="Close" ng-click="accountsError=''"><span aria-hidden="true">×</span></button>
+      <strong>Ошибка!</strong> {{accountsError}}
+</div>
+<form class="form-horizontal" name="myForm" ng-submit="submit()">
+  <div class="form-group" ng-class="{'has-error':myForm.login.$error.pattern}">
     <label for="inputEmail3" class="col-sm-2 control-label">Логин</label>
     <div class="col-sm-5">
-      <input type="text" class="form-control" id="inputEmail3" placeholder="login" ng-model="login">
+      <input type="text" required class="form-control" name="login" placeholder="" ng-pattern="patterns.login" ng-model="login">
+      <div role="alert" ng-show="register">
+        <span class="text-danger" ng-show="myForm.login.$error.pattern">
+        Логин должен состоять только из латинских символов и цифр, и быть длинной от 5 до 20 символов!!</span>
+      </div>
     </div>
   </div>
-  <div class="form-group" ng-class="{'has-error':hasErrors.password}">
+  <div class="form-group" ng-class="{'has-error':myForm.password.$error.pattern}">
     <label for="inputPassword3" class="col-sm-2 control-label">Пароль</label>
     <div class="col-sm-5">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="" ng-model="password">
+      <input type="password" class="form-control" name="password" placeholder="" ng-model="password" required ng-pattern="patterns.password">
+      <div role="alert" ng-show="register">
+        <span class="text-danger" ng-show="myForm.password.$error.pattern">
+        Пароль должен содержать хотя бы одну цифру и одну букву, и быть длинной от 5 до 20 символов!</span>
+      </div>
     </div>
   </div>
-  <div class="form-group" ng-show="register" ng-class="{'has-error':hasErrors.name}">
+  <div class="form-group" ng-show="register" ng-class="{'has-error':myForm.usrname.$error.pattern || myForm.usrname.$error.minlength || myForm.usrname.$error.maxlength}">
     <label for="inputName" class="col-sm-2 control-label">ФИО</label>
     <div class="col-sm-5">
-      <input type="text" class="form-control" id="inputName" placeholder="" ng-model="name">
+      <input type="text" ng-required="register" class="form-control" name="usrname" placeholder="" ng-pattern="patterns.usrname" ng-model="name" ng-minlength="5" ng-maxlength="30">
+      <div role="alert" ng-show="register">
+         <span class="text-danger" ng-show="myForm.usrname.$error.pattern">
+        ФИО должно быть состоять только из букв!</span>
+        <span class="text-danger" ng-show="myForm.usrname.$error.minlength">
+        ФИО должно быть длинее 5 символов!</span>
+        <span class="text-danger" ng-show="myForm.usrname.$error.maxlength">
+        ФИО должно быть короче 30 символов!</span>
+      </div>
     </div>
   </div>
-  <div class="form-group" ng-show="register" ng-class="{'has-error':hasErrors.email}">
-    <label for="inputEmail" class="col-sm-2 control-label">Почта</label>
+  <div class="form-group" ng-show="register" ng-class="{'has-error':myForm.email.$error.pattern}">
+    <label for="inputEmail"  class="col-sm-2 control-label">Почта</label>
     <div class="col-sm-5">
-      <input type="email" class="form-control" id="inputEmail" placeholder="" ng-model="email">
+      <input type="email" ng-required="register" class="form-control" name="email" placeholder="" ng-model="email">
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-5">
-      <button type="submit" class="btn btn-default" ng-hide="register" ng-click="enter()">Вход</button>
-        <button type="submit" class="btn btn-default" ng-click="register=!register" ng-hide="register">Регистрация</button>
-        <button type="submit" class="btn btn-default" ng-click="register=!register" ng-show="register">Назад</button>
-        <button type="submit" class="btn btn-default" ng-show="register" ng-click="reg()">Продолжить</button>
+        <button type="submit" class="btn btn-default" ng-hide="register" ng-click="enter()">Вход</button>
+        <button type="button" class="btn btn-default" ng-click="register=!register" ng-hide="register">Регистрация</button>
+        <button type="button" class="btn btn-default" ng-click="register=!register" ng-show="register">
+          <span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>
+          Назад</button>
+        <button type="submit" class="btn btn-default" ng-show="register" ng-click="reg()"> Продолжить
+          <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
+        </button>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-5">
+        <a>Забыли пароль?</a>
     </div>
   </div>
 </form>
