--- a/client/ads/view/ad.ng.html
+++ b/client/ads/view/ad.ng.html
@@ -1,39 +1,45 @@
+<form editable-form name="editableForm" id="myform" shown="editvar">
 <div class="container-fluid">
+    <div class="row">
+        <div class="buttons col-lg-4">
+            <button type="button" class="btn btn-info" ng-click="goback()" ng-show="ifhashistory">
+                <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
+            </button>
+      <!-- button to show form -->
+            <button type="button" class="btn btn-primary" ng-click="editableForm.$show()" ng-show="!editableForm.$visible && $root.currentUser && $root.currentUser._id==ad.author.id" id="editbutton">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </button>
+      <!-- buttons to submit / cancel form -->
+            <span ng-show="editableForm.$visible">
+                <br>
+                <button type="submit" class="btn btn-primary" ng-disabled="editableForm.$waiting">
+                    Сохранить
+                </button>
+                <button type="button" class="btn btn-default" ng-disabled="editableForm.$waiting" ng-click="editableForm.$cancel()">
+                    Отметить
+                </button>
+            </span>
+        </div>
+        <div class="buttons col-lg-8">
+            <span class="lead">Категория:<span editable-select="ad.category" e-ng-options="s as s.name for s in menu"><a ng-href="{{'/ads/'+ad.category.pattern+'/1'}}">{{ad.category.name}}</a></span></span>
+        </div>
+    </div>
 	<div class="row">
 		<div class="col-lg-4">
-			<div id="carousel" class="carousel slide" style="margin-top: 15px;">
+            <div class="item active thumbnail" ng-show="ad.images.length==0">
+				<img src="./noimage.png" alt="">
+				<div class="carousel-caption">
+				</div>
+			</div>
+            <div id="carousel" class="carousel slide" style="margin-top: 15px;"  ng-show="ad.images.length!=0">
 		<!--Индикаторы лайдов-->
 		<ol class="carousel-indicators">
-			<li class="active" data-target="#carousel" data-slide-to="0"></li>
-			<li data-target="#carousel" data-slide-to="1"></li>	
-			<li data-target="#carousel" data-slide-to="2"></li>
-			<li data-target="#carousel" data-slide-to="3"></li>
-			<li data-target="#carousel" data-slide-to="4"></li>
+			<li ng-repeat="pic in adImages" ng-class="{'active':$index===0}" data-target="#carousel" data-slide-to="{{$index}}"></li>
 		</ol>
 		<!--Слайды-->
 		<div class="carousel-inner">
-			<div class="item active">
-				<img src="first.jpg" alt="">
-				<div class="carousel-caption">
-				</div>
-			</div>
-			<div class="item">
-				<img src="second.jpg" alt="">
-				<div class="carousel-caption">
-				</div>
-			</div>
-			<div class="item">
-				<img src="third.jpg" alt="">
-				<div class="carousel-caption">
-				</div>
-			</div>
-			<div class="item">
-				<img src="fourth.jpg" alt="">
-				<div class="carousel-caption">
-				</div>
-			</div>
-			<div class="item">
-				<img src="fifth.jpg" alt="">
+			<div class="item" ng-repeat="pic in adImages" ng-class="{'active':$index===0}">
+				<img ng-src="{{pic}}" alt="">
 				<div class="carousel-caption">
 				</div>
 			</div>
@@ -46,53 +52,43 @@
 		<a href="#carousel" class="right carousel-control" data-slide="next">
 			<span class="glyphicon glyphicon-chevron-right"></span>
 		</a>		
-	</div>
+	       </div>
+            <div ng-show="$root.currentUser && $root.currentUser._id==ad.author.id">
+            <div ngf-drop ngf-select ngf-change="addImages($files)" ngf-keep="distinct" class="drop-box" 
+                 ngf-drag-over-class="{accept:'dragover', reject:'dragover-err', pattern:'image/jpeg'}" ngf-multiple="true" ngf-allow-dir="true"
+                 accept="image/jpeg" ngf-accept="'image/jpeg'" ngf-capture="'camera'"
+                 ngf-valid-only>Перетащите сюда изображения для объявления<br>или<br>нажмите по этой области</div>
+                <div class="form-group">
+        <div class="fixedheight" sv-root sv-part="adImages" sv-on-sort="replacePrevs($indexFrom,$indexTo)">
+            <div sv-element ng-repeat="img in adImages" class="thumbnail imgloadingthumb" ng-class="{'mainpic':$index===0}" ng-style="{'background':'url('+img+') 100% 100% no-repeat'}">
+                <button type="button" style="width:100%" class="btn btn-link" ng-click="removeItem($index)"><span class="glyphicon glyphicon-remove"></span></button>
+               
+            </div>
+            <div style="clear:both"></div>
+        </div>
+    </div>
+        </div>
 		</div>
 		<div class="col-lg-8">
 				<div class="row">	
-					<div class="col-lg-4">
-						<h2>Назваие</h2>
+					<div class="col-lg-8">
+						<h2 editable-text="ad.name">{{ad.name}}</h2>
+                        
+                    <p>
+                        <a ng-href="/account/{{ad.author.login}}"><strong>{{ad.author.name}}</strong></a>
+                        <small>{{ad.date | date:'dd.MM.yyyy HH:mm'}}</small>
+                    </p>
 					</div>
-					<div class="col-lg-4">
-						<h2>дата</h2>
-					</div>
-					<div class="col-lg-4">
-						<button type="button" class="btn btn-primary">Редактировать</button>
-					</div>
-				</div>
-				<div class="container-fluid well">	
-				<dl>
-					<dt>Цена</dt>
-					<dd>Получите подробную информацию о ключевых элементах инфраструктуры Bootstrap, в том числе о нашем подходе к созданию более качественных, быстрых и мощных веб-приложений.</dd>
-					<dt>Описание</dt>
-					<dd>Получите подробную информацию о ключевых элементах инфраструктуры Bootstrap, в том числе о нашем подходе к созданию более качественных, быстрых и мощных веб-приложений.</dd>
-				</dl>				
-				</div>
-				<div>
-					<legend>Оставьте свой комментарий</legend>
-						<div>
-							<div class="col-lg-6">
-								<textarea class="form-control" plceholder="Ваш комментарий" name="comment"></textarea>
-							</div>
-						</div>
-						<br/>
-						<button class="btn btn-primary">Отправить</button>
-						<br/>
-						<br/>
-						<div>							
-							<div class="well">
-								<a class="close">x</a>
-								<p><strong> Пастырь </strong></p>
-								<p style="font-family: Monotype Corsiva; font-size: 20px;"> Покайтесь, пока не поздно.</p>
-								<a type="button" href="#" style="align:right;">ответить</a>
-							</div>
-						</div>
-				</div>
-			
-			<div>	
+                    <div class="col-lg-4">
 
-			</div>
+                    </div>
+				</div>
+                <h3>Цена: <span editable-number="ad.price">{{ad.price}}</span> <span class="glyphicon glyphicon-ruble" aria-hidden="true"></span></h3>
+				<div class="lead">
+                    <p editable-textarea="ad.desc" e-rows="7" e-cols="40">{{ad.desc}}</p>		
+				</div>
+            <comments-box id="{{adid}}"></comments-box>
 		</div>
 	</div>	
-	
 </div>
+</form>
