--- a/client/ads/view/ad-new.ng.html
+++ b/client/ads/view/ad-new.ng.html
@@ -8,11 +8,12 @@
         <div class="col-sm-5"><textarea class="form-control" placeholder="Описание" required ng-model="desc"></textarea></div>
     </div>
     <div class="form-group">
-        <div class="col-sm-5"><input type="number" class="form-control" placeholder="Цена в рублях" required ng-model="price"></div>
+        <div class="col-sm-5"><input type="number" class="form-control" placeholder="Цена в рублях" required ng-model="price" min="0"></div>
     </div>
     <div class="form-group">
         <div class="col-sm-5">
             <select class="form-control" ng-model="category" ng-options="item as item.name for item in menu track by item.pattern" required>
+                <option value="">-- Укажите категорию --</option>
             </select>
         </div>
     </div>
